# mba-deobfuscator

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  DIAGNOSTIC_TOOLS_PLAN.md  GCNII_ABLATION_README.md  GNN_EDGE_RESEARCH.md  IMPLEMENTATION_PLAN_CRITICAL_ISSUES.md  IMPLEMENTATION_PLAN_PHASE3B.md  MEMORY_AUGMENTED_PLAN.md  MEMORY_AUGMENTED_PLAN_V2.md  MODIFICATIONS.md  REJECTED_PROPOSALS.md  pyproject.toml  requirements.txt  setup.ps1  setup.sh  test_cpp_integration.py  vast_quickstart.sh
configs/: diagnostics.yaml  example.yaml  phase1.yaml  phase1b_gmn.yaml  phase1c_gmn_finetune.yaml  phase2.yaml  phase3.yaml  scaled_model.yaml  semantic_hgt.yaml
data/: sample_custom_format.txt
docs/: ACTION_PLAN_CRITICAL_ISSUES.md  API_REFERENCE.md  ARCHITECTURE.md  DATASET_SCHEMA.md  DATA_PIPELINE.md  FULL_IMPLEMENTATION_PLAN.md  GCNII_ABLATION_GUIDE.md  GMN_IMPLEMENTATION_PLAN.md  GMN_PHASE4_TRAINING_PLAN.md  IMPLEMENTATION_PLAN_COPY_MECHANISM.md  IMPLEMENTATION_PLAN_CPP_GENERATOR_INTEGRATION.md  IMPLEMENTATION_PLAN_DAG_POSITIONAL.md  IMPLEMENTATION_PLAN_GRAPHGPS_HYBRID.md  IMPLEMENTATION_PLAN_PATH_EDGE_ENCODING.md  IMPLEMENTATION_PLAN_PATH_ENCODING_INTEGRATION.md  IMPLEMENTATION_PLAN_TRUTH_TABLE.md  IMPLEMENTATION_PLAN_VARIABLE_PERMUTATION.md  INFERENCE.md  RICH_FEATURES_IMPLEMENTATION.md  TRAINING.md
scripts/: evaluate.py  generate_data.py  migrate_legacy_datasets.py  plot_gcnii_results.py  simplify.py  test_custom_format_dataset.py  test_gcnii_setup.py  train.py  train_gcnii_ablation.py  validate_fingerprint_consistency.py  verify_gcnii.py  verify_model.py  visualize_diagnostics.py
src/: __init__.py  constants.py
src/data/: CUSTOM_FORMAT_README.md  __init__.py  ast_parser.py  augmentation.py  collate.py  custom_format_dataset.py  dag_features.py  dataset.py  fingerprint.py  tokenizer.py  walsh_hadamard.py
src/inference/: grammar.py  (+6 more)
tests/: __init__.py  test_copy_mechanism.py  test_dag_features.py  test_data.py  test_dataset_cpp_compat.py  test_dataset_schema_version.py  test_edge_type_equivalence.py  test_gcnii_mitigation.py  test_global_attention.py  test_gmn.py  test_inference.py  test_integration_example.py  test_models.py  test_operation_aware_aggregation.py  test_path_encoding.py  test_path_encoding_integration.py  test_phase4_gmn_training.py  test_property_detector.py  test_property_labels_fingerprint.py  test_semantic_hgt.py  test_utils.py  test_variable_permutation.py  test_walsh_hadamard.py
(+49 files in other folders)
